--- a/src/uis/MainWindowX.ui
+++ b/src/uis/MainWindowX.ui
@@ -59,6 +59,12 @@
     <property name="title">
      <string>Plik</string>
     </property>
+    <addaction name="actionNew"/>
+    <addaction name="actionOpen"/>
+    <addaction name="separator"/>
+    <addaction name="actionSave"/>
+    <addaction name="actionSaveAs"/>
+    <addaction name="separator"/>
     <addaction name="actionClose"/>
    </widget>
    <addaction name="menuFile"/>
@@ -75,6 +81,26 @@
    </property>
    <property name="toolTip">
     <string>Wypierdalaj XD</string>
+   </property>
+  </action>
+  <action name="actionNew">
+   <property name="text">
+    <string>Nowy</string>
+   </property>
+  </action>
+  <action name="actionOpen">
+   <property name="text">
+    <string>Otwórz...</string>
+   </property>
+  </action>
+  <action name="actionSave">
+   <property name="text">
+    <string>Zapisz</string>
+   </property>
+  </action>
+  <action name="actionSaveAs">
+   <property name="text">
+    <string>Zapisz jako...</string>
    </property>
   </action>
  </widget>
