--- a/src/uis/MainWindowX.ui
+++ b/src/uis/MainWindowX.ui
@@ -179,12 +179,19 @@
         <string>Tab 2</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_4">
-        <item row="1" column="0">
+        <item row="3" column="0">
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <item>
            <widget class="QPushButton" name="addLayerButton">
             <property name="text">
              <string>Dodaj warstwę</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="deleteLayerButton">
+            <property name="text">
+             <string>Usuń warstwę</string>
             </property>
            </widget>
           </item>
@@ -204,7 +211,7 @@
              <height>322</height>
             </rect>
            </property>
-           <layout class="QGridLayout" name="gridLayout_5">
+           <layout class="QVBoxLayout" name="verticalLayout_2">
             <property name="leftMargin">
              <number>0</number>
             </property>
@@ -217,9 +224,6 @@
             <property name="bottomMargin">
              <number>0</number>
             </property>
-            <item row="0" column="0">
-             <layout class="QGridLayout" name="layerPreviewLayout"/>
-            </item>
            </layout>
           </widget>
          </widget>
