--- a/src/uis/MainWindowX.ui
+++ b/src/uis/MainWindowX.ui
@@ -146,7 +146,7 @@
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="Canvas" name="canvas">
+     <widget class="WorkSpace" name="workSpace">
       <property name="styleSheet">
        <string notr="true">background-color: transparent;</string>
       </property>
@@ -238,6 +238,9 @@
             <property name="bottomMargin">
              <number>0</number>
             </property>
+            <item>
+             <layout class="QVBoxLayout" name="layerPreviewLayout"/>
+            </item>
            </layout>
           </widget>
          </widget>
@@ -376,7 +379,7 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>Canvas</class>
+   <class>WorkSpace</class>
    <extends>QGraphicsView</extends>
    <header location="global">Canvas.h</header>
   </customwidget>
