--- a/bin/res/styles.qss
+++ b/bin/res/styles.qss
@@ -2,3 +2,8 @@ QMenu:item:selected
 {
     background-color: qlineargradient( x1:0 y1:0, x2:0 y2:1, stop:0 #b8829e, stop:1 #871f55 );
 }
+
+QMainWindow
+{
+    background-color: #7D7D7D;
+}
