Added couple icons to toolbar. Selection rectangle draws around layer bounding rectangle. Drawing using brush works correctly.

--- a/src/uis/ToolBar.ui
+++ b/src/uis/ToolBar.ui
@@ -77,6 +77,10 @@
      <property name="text">
       <string/>
      </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>../../bin/res/edit.svg</normaloff>../../bin/res/edit.svg</iconset>
+     </property>
     </widget>
    </item>
    <item>
@@ -99,7 +103,7 @@
     </widget>
    </item>
    <item>
-    <widget class="ToolBarButton" name="pushButton_4">
+    <widget class="ToolBarButton" name="rectangleToolButton">
      <property name="minimumSize">
       <size>
        <width>60</width>
