--- a/src/uis/MainWindowX.ui
+++ b/src/uis/MainWindowX.ui
@@ -225,7 +225,11 @@
              </font>
             </property>
             <property name="text">
-             <string>PushButton</string>
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>../../bin/res/pencil.svg</normaloff>../../bin/res/pencil.svg</iconset>
             </property>
            </widget>
           </item>
@@ -242,7 +246,7 @@
              <x>0</x>
              <y>0</y>
              <width>276</width>
-             <height>331</height>
+             <height>328</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_2">
