--- a/src/uis/MainWindowX.ui
+++ b/src/uis/MainWindowX.ui
@@ -86,8 +86,50 @@
       </property>
       <widget class="QWidget" name="tab_3">
        <attribute name="title">
-        <string>Parameters</string>
+        <string>Narzędzia</string>
        </attribute>
+       <layout class="QGridLayout" name="gridLayout_5">
+        <item row="0" column="1">
+         <layout class="QGridLayout" name="toolLayout">
+          <item row="0" column="1">
+           <widget class="QLabel" name="activeToolLabel">
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <spacer name="horizontalSpacer">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>117</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="0" column="2">
+           <spacer name="horizontalSpacer_2">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>114</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="1" column="0" colspan="3">
+           <widget class="ColorPicker" name="colorPicker" native="true"/>
+          </item>
+         </layout>
+        </item>
+       </layout>
       </widget>
       <widget class="QWidget" name="layersTab">
        <attribute name="title">
@@ -161,7 +203,7 @@
              <x>0</x>
              <y>0</y>
              <width>276</width>
-             <height>328</height>
+             <height>343</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -202,13 +244,6 @@
          <property name="spacing">
           <number>0</number>
          </property>
-         <item row="1" column="0">
-          <widget class="QLabel" name="activeToolLabel">
-           <property name="text">
-            <string/>
-           </property>
-          </widget>
-         </item>
         </layout>
        </item>
       </layout>
@@ -347,6 +382,12 @@
    <class>WorkSpace</class>
    <extends>QGraphicsView</extends>
    <header location="global">Canvas.h</header>
+  </customwidget>
+  <customwidget>
+   <class>ColorPicker</class>
+   <extends>QWidget</extends>
+   <header location="global">ColorPicker.h</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources/>
