--- a/src/uis/MainWindowX.ui
+++ b/src/uis/MainWindowX.ui
@@ -91,6 +91,19 @@
        <layout class="QGridLayout" name="gridLayout_5">
         <item row="0" column="1">
          <layout class="QGridLayout" name="toolLayout">
+          <item row="0" column="2">
+           <spacer name="horizontalSpacer_2">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>114</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
           <item row="0" column="1">
            <widget class="QLabel" name="activeToolLabel">
             <property name="text">
@@ -114,18 +127,8 @@
           <item row="1" column="0" colspan="3">
            <widget class="ColorPicker" name="colorPicker" native="true"/>
           </item>
-          <item row="0" column="2">
-           <spacer name="horizontalSpacer_2">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>114</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
+          <item row="2" column="0" colspan="3">
+           <widget class="TextEditOptions" name="textEditOptions" native="true"/>
           </item>
          </layout>
         </item>
@@ -387,6 +390,12 @@
    <class>ColorPicker</class>
    <extends>QWidget</extends>
    <header location="global">ColorPicker.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>TextEditOptions</class>
+   <extends>QWidget</extends>
+   <header location="global">TextEditOptions.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
