--- a/src/uis/ToolBar.ui
+++ b/src/uis/ToolBar.ui
@@ -173,6 +173,28 @@
      </property>
     </widget>
    </item>
+   <item>
+    <widget class="ToolBarButton" name="textToolButton">
+     <property name="minimumSize">
+      <size>
+       <width>60</width>
+       <height>60</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>60</width>
+       <height>60</height>
+      </size>
+     </property>
+     <property name="toolTip">
+      <string>Narzędzie tekst</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <customwidgets>
