--- a/src/uis/NewCanvasDialog.ui
+++ b/src/uis/NewCanvasDialog.ui
@@ -33,8 +33,14 @@
       </item>
       <item row="0" column="1">
        <widget class="QSpinBox" name="widthSpinBox">
+        <property name="minimum">
+         <number>50</number>
+        </property>
         <property name="maximum">
          <number>20000</number>
+        </property>
+        <property name="value">
+         <number>500</number>
         </property>
        </widget>
       </item>
@@ -47,8 +53,14 @@
       </item>
       <item row="1" column="1">
        <widget class="QSpinBox" name="heightSpinBox">
+        <property name="minimum">
+         <number>50</number>
+        </property>
         <property name="maximum">
          <number>20000</number>
+        </property>
+        <property name="value">
+         <number>500</number>
         </property>
        </widget>
       </item>
